tests/fixtures/errors/e0417_foreach_source_not_array.mimz
// expect: E0417
module M {
  in a: bits[8]
  out o: bits[8]

  foreach x in a {
    o = x
  }
}
